src/styles/Nav.module.scss
@import "vars";
.Nav{
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
    height: 3em;
    padding: 0 5em;
    position: fixed;
    z-index: 1;
    background-color: rgba($color: $bg-color, $alpha: .98);
    transition: all .5s ease-out;

    &__logo {
        color: $primary-color;
        font-size: 30px;
        font-weight: 600;
    }

    &__button-download {
        border: none;
        background-color: $primary-color;
        padding: 5px 20px;
        font-size: 16px;
    }
}
.Menu{
    list-style: none;
    display: flex;
    width: fit-content;
    justify-content: space-between;
    padding: .5em 0;
    margin-bottom: -1px;

    &__item{
        margin-left: .5em;
        a {
            text-decoration: none;
            padding: 0 1em;
            color: $on-surface-color;
            text-transform: uppercase;
            font-size: 16px;
        }
        &-active a, a:hover{
            color: $primary-color;
        }
    }
    &-background {
        background-color: rgba($color: $surface-color, $alpha: .98);
        transition: all .5s ease-in;
    }
}

